Nifftyinator: CLEAN! IT! UP! (#219)
Co-authored-by: dclements <879690+dclements@users.noreply.github.com>
Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>